forgot zoomed avatar z-index fix for normal mode

--- a/public/style.css
+++ b/public/style.css
@@ -4209,7 +4209,7 @@ body.noShadows * {
     position: absolute;
     padding: 0;
     filter: drop-shadow(2px 2px 2px #51515199);
-    z-index: 2;
+    z-index: 29;
     overflow: hidden;
     display: none;
     bottom: 0;
